--- a/index.html
+++ b/index.html
@@ -243,10 +243,12 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Method</h2>
         <div class="content has-text-justified">
-          <p>Dataset Distillation with Attention Matching (DataDAM) is meticulously designed to efficiently capture the most crucial and distinctive
-          information from real datasets. This method consists of two essential components: Spatial Attention Matching (SAM) and Last-Layer Feature
-          Alignment. SAM aligns attention maps, while the Last-Layer Feature Alignment synchronizes embedded representations from different layers
-          in randomly initialized neural networks. DataDAM is a streamlined and effective approach to distilling essential dataset insights.</p>
+          <p>The ATOM methodology distills knowledge from real datasets into a smaller, synthetic dataset using an Attention Mixer Module
+            to generate attention maps for intermediate features. These maps enable a matching loss calculation, measuring the
+            dissimilarity between real and synthetic dataset attention maps. Additionally, features from the final layer inject
+            semantic information into the matching process. The optimization problem minimizes these losses using stochastic gradient
+            descent, resulting in ATOM effectively capturing crucial dataset information for distillation into a synthetic dataset,
+            offering a streamlined methodology.</p>
           <figure>
             <img src="static/img/DataDAM_pipeline.png" style="max-width: 100%;>
             <figcaption style="text-align: center;"></figcaption>
