--- a/index.html
+++ b/index.html
@@ -264,8 +264,8 @@
             descent, resulting in ATOM effectively capturing crucial dataset information for distillation into a synthetic dataset,
             offering a streamlined methodology.</p>
           <figure>
-            <img src="static/img/DataDAM_pipeline.png" style="max-width: 100%;>
-            <figcaption style="text-align: center;"></figcaption>
+            <img src="img/ATOM (2).png" style="max-width: 100%;>
+            <figcaption style="text-align: center;">< An overview of the proposed ATOM framework. By mixing attention, ATOM is able to capture both spatial localization and class context. (b) Demonstration of the internal architecture for spatial- and channel-wise attention in the \texttt{ATOM} Module. The spatial-wise attention computes attention at specific locales through different filters, resulting in a matrix output, whereas the channel-wise attention calculates attention between each filter, naturally producing a vectorized output.>
           </figure> 
         </div>
       </div>
